<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Green"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="8">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logoki" />

    <View
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/maintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renseignerLogin"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/EditText"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText

                android:id="@+id/EditText2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:hint="Mot de passe"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/connectButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/Emeraude"
            android:text="@string/seConnecter"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/guestButton"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/Emeraude"
            android:text="@string/sessionInvite"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="onSignupClick"
            android:text="@string/sinscrire"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>
