<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Emeraude">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background_border"
        android:fontFamily="@font/ltcushion_bold"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/titre"
        android:textColor="@color/white"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/question_background_border"
        android:gravity="center"
        android:padding="40dp"
        android:text="@string/question"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/reponse1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/question_background_border"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reponse"
                android:textColor="@color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/reponse2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/question_background_border"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reponse"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/reponse3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/question_background_border"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reponse"
                android:textColor="@color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/reponse4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/question_background_border"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reponse"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="220dp"
        android:format="%s"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/question_background_border"
        android:padding="10dp"
        android:text="@string/valider"
        android:textColor="@color/white" />

</RelativeLayout>